--- a/config.example.json
+++ b/config.example.json
@@ -2,15 +2,37 @@
     "rd": {
         "token": "YOUR_REAL_DEBRID_TOKEN_HERE"
     },
-    "trakt": {
-        "refresh_token": "YOUR_TRAKT_REFRESH_TOKEN",
-        "access_token": "",
-        "client_id": "YOUR_TRAKT_CLIENT_ID",
-        "client_secret": "YOUR_TRAKT_CLIENT_SECRET",
-        "redirect_uri": "urn:ietf:wg:oauth:2.0:oob"
+    "mdbList": {
+        "api_key": "YOUR_MDBLIST_API_KEY"
     },
-    "movies": [131, 466, 789],
-    "shows": [425, 950, 1234],
+    "movies": [
+        {
+            "id": 6452,
+            "name": "Movie List 1",
+            "qualityProfileId": 1,
+            "rootFolderPath": "/path/to/root"
+        },
+        {
+            "id": 13804,
+            "name": "Movie List 2",
+            "qualityProfileId": 1,
+            "rootFolderPath": "/path/to/root"
+        }
+    ],
+    "shows": [
+        {
+            "id": 2442,
+            "name": "Show List 1",
+            "qualityProfileId": 1,
+            "rootFolderPath": "/path/to/root"
+        },
+        {
+            "id": 244,
+            "name": "Show List 2",
+            "qualityProfileId": 1,
+            "rootFolderPath": "/path/to/root"
+        }
+    ],
     "radarr": {
         "base_url": "https://your-radarr-url.com",
         "port": "7878",
